--- a/src/views/authors.ejs
+++ b/src/views/authors.ejs
@@ -17,7 +17,7 @@
       <div class="list-group">
         <div class="list-group">
           <% {authors.map((author) => { %>
-            <a href="/authors/<%= author.id %>/books" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+            <a href="/authors/<%= author.id %>/Books" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
               <img src="https://simg.nicepng.com/png/small/202-2022264_usuario-annimo-usuario-annimo-user-icon-png-transparent.png" alt="twbs" width="32" height="32" class="rounded-circle flex-shrink-0">
               <div class="d-flex gap-2 w-100 justify-content-between">
                 <div>
