--- a/src/views/bookDetail.ejs
+++ b/src/views/bookDetail.ejs
@@ -13,8 +13,8 @@
 
     <div class="container">
       <div class="px-4 py-5 my-5 text-center">
-        <img class="d-block mx-auto mb-4" src="<%=book.cover%>" alt="" width="172" height="257">
-        <h1 class="display-5 fw-bold"><%=book.title%></h1>
+        <img class="d-block mx-auto mb-4" src="<%= book.cover %>" alt="" width="172" height="257">
+        <h1 class="display-5 fw-bold"><%= book.title %> </h1>
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4 fw-bold">Authors:  </p>
           <p class="lead mb-4 fw-bold">Release Date: </p>
@@ -23,8 +23,12 @@
             <a href="/books/edit/<%=book.id%>">
             <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Edit</button>
           </a>
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Delete</button>
-          </div>
+
+          <form action="/books/<%= book.id %>" method="POST">
+            <button type="submit" class="btn btn-outline-secondary btn-lg px-4">Delete</button>      
+          </form>
+          
+           </div>
         </div>
       </div>
   </div>
